# ML-Jobs-project

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-app.yml
ml-jobs/: pyproject.toml
ml-jobs/ml_jobs/jobs/: build_sales_model.py
ml-jobs/ml_jobs/utils/data_prep/: get_train_test_split.py
ml-jobs/ml_jobs/utils/extract/: get_table.py
ml-jobs/ml_jobs/utils/management/: setup_experiment.py
ml-jobs/ml_jobs/utils/model/: train_sales.py
