[tool.poetry]
name = "ml-jobs-project"
version = "0.1.0"
description = ""
authors = ["Brian L <bclipp770@gmail.com>"]
readme = "README.md"
packages = [{include = "ml_jobs_project"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
