[tool.poetry]
name = "ml-jobs"
version = "0.1.0"
description = ""
authors = ["Brian L <bclipp770@gmail.com>"]
readme = "README.md"
packages = [{include = "ml_jobs"}]

[tool.poetry.dependencies]
python = "^3.9"
black = "^23.3.0"
pylint = "^2.17.4"
flake8 = "^6.0.0"
pre-commit = "^3.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
